--- a/push-ecr-image/Dockerfile
+++ b/push-ecr-image/Dockerfile
@@ -1,15 +1,8 @@
-FROM alpine:3.11
+FROM amazon/aws-cli:2.8.9
 ENV AWS_SDK_LOAD_CONFIG=true
 ENV AWS_PAGER=''
-RUN apk add docker-cli bash jq
-RUN apk add --update \
-    python \
-    python-dev \
-    py-pip \
-    build-base \
-    && pip install awscli==1.18.52 --upgrade --user --no-warn-script-location \
-    && apk --purge -v del py-pip \
-    && rm -rf /var/cache/apk/*
+RUN yum install -y bash jq
+RUN amazon-linux-extras install -y docker=18.09.9
 RUN ln -s /root/.local/bin/aws /usr/bin/aws
 RUN mkdir /data
 COPY ./docker-push.sh /docker-push.sh
