--- a/examples/scheduled-lambda/cron-job-container/Dockerfile
+++ b/examples/scheduled-lambda/cron-job-container/Dockerfile
@@ -1,6 +1,3 @@
-FROM public.ecr.aws/lambda/python:3.8
-RUN rm -rf ${LAMBDA_TASK_ROOT}
-COPY ./app  ${LAMBDA_TASK_ROOT}
-COPY ./requirements.txt .
-
-RUN  pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
+FROM public.ecr.aws/lambda/provided:al2
+COPY ./job.sh  ${LAMBDA_TASK_ROOT}
+COPY ./bootstrap.sh  ${LAMBDA_RUNTIME_DIR}/bootstrap
